# rust-cookbook-code

./: README.md
ch1-algorithms-rand/: Cargo.toml
ch1-algorithms-rand/src/: main.rs
ch1-algorithms-vec/: Cargo.toml
ch1-algorithms-vec/src/: main.rs
ch10-encoding-charsets/: Cargo.toml
ch10-encoding-charsets/src/: main.rs
ch10-encoding-csv/: Cargo.toml
ch10-encoding-csv/src/: main.rs
ch10-encoding-data/: Cargo.toml
ch10-encoding-data/src/: main.rs
ch11-error-handling/: Cargo.toml
ch11-error-handling/src/: main.rs
ch12-fs/: Cargo.toml
ch12-fs/src/: main.rs
ch13-hw/: Cargo.toml
ch14-mem/: Cargo.toml
ch14-mem/src/: main.rs
ch15-net/: Cargo.toml
ch15-net/src/: main.rs
ch16-os/: Cargo.toml  out.txt
ch16-os/src/: main.rs
ch17-math/: Cargo.toml
ch17-math-complex/: Cargo.toml
ch17-math-complex/src/: main.rs
ch17-math-stat/: Cargo.toml
ch17-math-stat/src/: main.rs
ch17-math-tri/: Cargo.toml
ch17-math-tri/src/: main.rs
ch17-math/src/: main.rs
ch18-text-reg/: Cargo.toml
ch18-text-reg/src/: main.rs
ch18-text-str/: Cargo.toml
ch18-text-str/src/: main.rs
ch19-web-clients/: Cargo.toml
ch19-web-clients-api/: Cargo.toml
ch19-web-clients-api/src/: main.rs
ch19-web-clients-downloads/src/: main.rs
ch19-web-clients/src/: main.rs
ch19-web-link/: Cargo.toml
ch19-web-link/src/: main.rs
ch19-web-mime/: Cargo.toml
ch19-web-mime/src/: main.rs
ch19-web-url/: Cargo.toml
ch19-web-url/src/: main.rs
ch2-cli-term/: Cargo.toml
ch2-cli-term/src/: main.rs
ch2-commandline/: Cargo.toml  package.json
ch2-commandline/src/: main.rs
ch3-compression/: Cargo.toml  dai.json  mainetpeer.txt
ch4-concurrency-explicit-threads/: Cargo.toml
ch4-concurrency-explicit-threads/src/: main.rs
ch5-cryptography/: Cargo.toml
ch6-datastructures/: Cargo.toml
ch7-db-postgres/: Cargo.toml
ch7-db-sqlite/: Cargo.toml  cats.db
ch8-datetime/: Cargo.toml
ch9-devtools/: Cargo.toml
ch9-devtools-buildtimetooling/: build.rs
ch9-devtools-buildtimetoolingc/: Cargo.toml  build.rs
ch9-devtools-buildtimetoolingxx/: Cargo.toml  build.rs
ch9-devtools-versioning/: Cargo.toml
(+12 files in other folders)
