[package]
name = "ch10-encoding-charsets"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
base64 = "0.13.0"
csv = "1.1.6"
data-encoding = "2.3.2"
error-chain = "0.12.4"
percent-encoding = "2.1.0"
serde = { version = "1.0.130", features = ["derive"] }
url = "2.2.2"
