[package]
name = "ch11-error-handling"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
csv = "1.1.6"
error-chain = "0.12.4"
reqwest = { version = "0.11.5", features = ["blocking"] }
serde = { version = "1.0.130", features = ["derive"] }
 