[package]
name = "ch17-math"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
approx = "0.4.0"
nalgebra = { version = "0.24.0", features = ["serde-serialize"] }
ndarray = { version = "0.14.0", features = ["approx"] }
serde_json =" 1.0.61"
serde = { version = "1.0", features = ["derive"] }