[package]
name = "ch19-web-link"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
error-chain = "0.12.4"
lazy_static = "1.4.0"
regex = "1.5.4"
reqwest = "0.11.5"
select = "0.5.0"
tokio = {version =  "1.0.1", features = ["full"]}
url = "2.2.2"
