[package]
name = "ch4-concurrency-explicit-threads"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossbeam = "0.8.1"
crossbeam-channel = "0.5.1"
error-chain = "0.12.4"
glob = "0.3.0"
image = "0.23.14"
lazy_static = "1.4.0"
num = "0.4.0"
num_cpus = "1.13.0"
rand = "0.8.4"
rayon = "1.5.1"
ring = "0.16.20"
threadpool = "1.8.1"
walkdir = "2.3.2"
